bug(api): fix response body from camel case to snake case - modify all request and response body from camel case to snake case - add delete field to car table - use an update on delet field instead of deleting database row
[Finishes 167299413]
